fix shifted layout within blobs

--- a/_sass/bloob/blob.scss
+++ b/_sass/bloob/blob.scss
@@ -1,14 +1,13 @@
-.blob {
-  color: $fore;
-  background-color: $well;
-  margin: 1rem 0;
-  padding: 2rem 0.25rem;
   position: relative;
   max-width: 100vw;
   text-align: center;
   -webkit-animation: Blob 45s ease infinite;
   -moz-animation: Blob 45s ease infinite;
   animation: Blob 45s ease infinite;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-evenly;
+  align-items: center;
 
   h1,
   h2,
@@ -23,8 +22,16 @@
   h1,
   h2,
   h3 {
-    max-width: 80%;
+    width: 100%;
+    max-width: 90%;
+
+    @include media-min-width($pad) {
+      max-width: none;
+    }
+
     margin-bottom: 1em;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   ul,
@@ -36,13 +43,11 @@
   p,
   .post p {
     text-align: justify;
-    margin-left: auto;
-    margin-right: auto;
     font-weight: lighter;
 
-    // @include light-mode {
-    //   font-weight: normal;
-    // }
+    @include light-mode {
+      font-weight: normal;
+    }
   }
 }
 
@@ -50,6 +55,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 
   h1 {
     margin: 0;
@@ -57,6 +63,10 @@
 
   @include media-min($pad) {
     margin-top: 2rem;
+  }
+
+  .bloob {
+    width: 100%;
   }
 }
 
